--- a/category.html
+++ b/category.html
@@ -52,64 +52,6 @@
         </nav>
     </header>
 
-    <div class='background'>
-        <input type="radio" name="slider" class="slide-radio1" checked id="slider_1">
-        <input type="radio" name="slider" class="slide-radio2" id="slider_2">
-        <input type="radio" name="slider" class="slide-radio3" id="slider_3">
-        <input type="radio" name="slider" class="slide-radio4" id="slider_4">
-        <div class="slider-pagination">
-            <label for="slider_1" class="page1"></label>
-            <label for="slider_2" class="page2"></label>
-            <label for="slider_3" class="page3"></label>
-            <label for="slider_4" class="page4"></label>
-        </div>
-        <div class="next control">
-            <label for="slider_1" class="numb1"><i class="iconfont icon-jiantou-you"></i></label>
-            <label for="slider_2" class="numb2"><i class="iconfont icon-jiantou-you"></i></label>
-            <label for="slider_3" class="numb3"><i class="iconfont icon-jiantou-you"></i></label>
-            <label for="slider_4" class="numb4"><i class="iconfont icon-jiantou-you"></i></label>
-        </div>
-        <div class="previous control">
-            <label for="slider_1" class="numb1"><i class="iconfont icon-jiantou-zuo"></i></label>
-            <label for="slider_2" class="numb2"><i class="iconfont icon-jiantou-zuo"></i></label>
-            <label for="slider_3" class="numb3"><i class="iconfont icon-jiantou-zuo"></i></label>
-            <label for="slider_4" class="numb4"><i class="iconfont icon-jiantou-zuo"></i></label>
-        </div>
-        <div class="slider slide1">
-            <div>
-                <h2>php中文网-教程_手册_视频-免费php在线学习平台</h2>
-                <a href="javascript:;" class="button">查看详情</a>
-            </div>
-        </div>
-        <div class="slider slide2">
-            <div>
-                <h2>让交流变得简单</h2>
-                <a href="javascript:;" class="button">查看详情</a>
-            </div>
-        </div>
-        <div class="slider slide3">
-            <div>
-                <h2>一起学习与成长</h2>
-                <a href="javascript:;" class="button">查看详情</a>
-            </div>
-        </div>
-        <div class="slider slide4">
-            <div>
-                <h2>跪舔各位PHP大佬</h2>
-                <a href="javascript:;" class="button">查看详情</a>
-            </div>
-        </div>
-
-        <div class="shape circle"></div>
-        <div class="shape rectangle"></div>
-        <div class="shape triangle"></div>
-        <div class="shape square-round-three"></div>
-        <div class="shape square-round-one"></div>
-        <div class="shape square-round-two"></div>
-        <div class="shape circle-quarter-left-top"></div>
-        <div class="shape heart"></div>
-    </div>
-
     <div class="contain">
         <div class="left">
             <a href="http://baidu.com">
@@ -212,25 +154,16 @@
             </div>
             </a>
 
-            <div class="php54-link">
-                <span><i class="iconfont icon-lianjie1"></i> 友情链接</span>
+            <div class="php54-page">
                 <ul>
-                    <li>1. <a href="javascript:;" title="php中文网" target="_blank">php中文网</a></li>
-                    <li>2. <a href="javascript:;">我一直在学习</a></li>
-                    <li>2. <a href="javascript:;">我一直在学习</a></li>
-                    <li>2. <a href="javascript:;">我一直在学习</a></li>
-                    <li>3. <a href="javascript:;">linux服务器</a></li>
-                    <li>3. <a href="javascript:;">linux服务器</a></li>
-                    <li>3. <a href="javascript:;">linux服务器</a></li>
-                    <li>3. <a href="javascript:;">linux服务器</a></li>
-                    <li>4. <a href="javascript:;">pythson</a></li>
-                    <li>4. <a href="javascript:;">pythson</a></li>
-                    <li>4. <a href="javascript:;">pythson</a></li>
-                    <li>4. <a href="javascript:;">pythson</a></li>
-                    <li>5. <a href="javascript:;">每天使</a></li>
-                    <li>5. <a href="javascript:;">每天使</a></li>
-                    <li>5. <a href="javascript:;">每天使</a></li>
-                    <p style="clear:both"></p>
+                    <li><a href="/" title="上一页"><i class="iconfont icon-prev"></i></a></li>
+                    <li><a href="/">1</a></li>
+                    <li><span>2</span></li>
+                    <li><a href="/page/3/">3</a></li>
+                    <li><a href="/page/4/">4</a></li>
+                    <li><span>...</span></li>
+                    <li><a href="/page/9/">9</a></li>
+                    <li><a href="/page/3/" title="下一页"><i class="iconfont icon-next"></i></a></li>
                 </ul>
             </div>
         </div>
